--- a/index.html
+++ b/index.html
@@ -36,16 +36,17 @@
     <section class="home">   
         <h3 class="next soft ">The hello</h3>
         <div class="container">
-            <div class="card"> <img src="icon/svgs/solid/apple-alt.svg" alt="image" class="image soft"></div>
-            <div class="card"> <img src="icon/svgs/solid/apple-alt.svg" alt="image" class="image soft"></div>
-            <div class="card"> <img src="icon/svgs/solid/apple-alt.svg" alt="image" class="image soft"></div>
-            <div class="card"> <img src="icon/svgs/solid/apple-alt.svg" alt="image" class="image soft"></div>
-            <div class="card"> <img src="icon/svgs/solid/apple-alt.svg" alt="image" class="image soft"></div>
-            <div class="card"> <img src="icon/svgs/solid/apple-alt.svg" alt="image" class="image soft"></div>
-            <div class="card"> <img src="icon/svgs/solid/apple-alt.svg" alt="image" class="image soft"></div>
-            <div class="card"> <img src="icon/svgs/solid/apple-alt.svg" alt="image" class="image soft"></div>
-            <div class="card"> <img src="icon/svgs/solid/apple-alt.svg" alt="image" class="image soft"></div>
-            <div class="card"> <img src="icon/svgs/solid/apple-alt.svg" alt="image" class="image soft"></div>
+            <div class="card"><i class="fas fa-utensils"></i></div>
+            <div class="card"><i class="fas fa-utensils"></i></div>
+            <div class="card"><i class="fas fa-utensils"></i></div>
+            <div class="card"><i class="fas fa-utensils"></i></div>
+            <div class="card"><i class="fas fa-utensils"></i></div>
+            <div class="card"><i class="fas fa-utensils"></i></div>
+            <div class="card"><i class="fas fa-utensils"></i></div>
+            <div class="card"><i class="fas fa-utensils"></i></div>
+            <div class="card"><i class="fas fa-utensils"></i></div>
+            <div class="card"><i class="fas fa-utensils"></i></div>
+            
         </div>
     </section>
 
